--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -222,6 +222,137 @@
    "source": [
     "get_product(x=2,y=\"3\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aa0dbfc",
+   "metadata": {},
+   "source": [
+    "Download dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "98c6dc64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2eb3aa97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url=\"https://drive.google.com/file/d/1Bhdmq6ertqqjaM1aVYr7mwUg2FKhHGH1/view?usp=drive_link\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "897cbd55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b60672c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https:',\n",
+       " '',\n",
+       " 'drive.google.com',\n",
+       " 'file',\n",
+       " 'd',\n",
+       " '1Bhdmq6ertqqjaM1aVYr7mwUg2FKhHGH1',\n",
+       " 'view?usp=drive_link']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url.split(\"/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "29bff3b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1Bhdmq6ertqqjaM1aVYr7mwUg2FKhHGH1'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id=url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3ca5130d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1Bhdmq6ertqqjaM1aVYr7mwUg2FKhHGH1\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1Bhdmq6ertqqjaM1aVYr7mwUg2FKhHGH1&confirm=t&uuid=b1f23105-fe14-4c1e-a0bf-8dd850178fe7\n",
+      "To: d:\\End-to-End-Pneumonia-detection-using-MLflow-DVC\\research\\chest xray dataset.zip\n",
+      "100%|██████████| 77.6M/77.6M [07:59<00:00, 162kB/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'chest xray dataset.zip'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "gdown.download(prefix+file_id, \"chest xray dataset.zip\")"
+   ]
   }
  ],
  "metadata": {
