--- a/research/4_model_evaluation_with_mlflow.ipynb
+++ b/research/4_model_evaluation_with_mlflow.ipynb
@@ -203,12 +203,12 @@
    ],
    "source": [
     "import dagshub\n",
-    "dagshub.init(repo_owner='m', repo_name='End-to-End-Pneumonia-detection-using-DVC', mlflow=True)\n",
+    "dagshub.init(repo_owner='mekharemanan', repo_name='End-to-End-Pneumonia-detection-using-MLflow-DVC', mlflow=True)\n",
     "\n",
-    "import mlflow\n",
-    "with mlflow.start_run():\n",
-    "  mlflow.log_param('parameter name', 'value')\n",
-    "  mlflow.log_metric('metric name', 1)"
+    "# import mlflow\n",
+    "# with mlflow.start_run():\n",
+    "#   mlflow.log_param('parameter name', 'value')\n",
+    "#   mlflow.log_metric('metric name', 1)"
    ]
   },
   {
@@ -285,7 +285,7 @@
     "        eval_config = EvaluationConfig(\n",
     "            path_of_model=\"artifacts/training/model.h5\",\n",
     "            training_data=\"artifacts/data_ingestion/chest xray dataset\",\n",
-    "            mlflow_uri=\"https://dagshub.com/m/End-to-End-Pneumonia-detection-using-DVC.mlflow\",\n",
+    "            mlflow_uri=\"https://dagshub.com/mekharemanan/End-to-End-Pneumonia-detection-using-MLflow-DVC.mlflow\",\n",
     "            all_params=self.params,\n",
     "            params_image_size=self.params.IMAGE_SIZE,\n",
     "            params_batch_size=self.params.BATCH_SIZE\n",
